hphp/test/quick/define.php.expectf

Notice: Constant FOO already defined in %s on line 14
int(42)
string(5) "hello"
array(3) {
  [0]=>
  string(1) "a"
  [1]=>
  string(1) "b"
  [2]=>
  string(1) "c"
}
=== Enter define_b.php ===
int(42)
string(5) "baz_b"
array(3) {
  [0]=>
  string(1) "a"
  [1]=>
  string(1) "b"
  [2]=>
  string(1) "c"
}
=== Leave define_b.php ===
string(5) "baz_b"

Notice: Constant BAZ already defined in %s on line 24
string(5) "baz_b"
HELLOHELLO

Fatal error: Cannot access static:: when no class scope is active in %s on line 35
